<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SeaShoque</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_tim">Tim</string>
    <string name="title_activity_start_menu">SeaShoque</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="desc_bckgimg">Background Image</string>
    <string name="descimg">Image</string>
    <string name="menu_quickgame">Quick Game</string>
    <string name="menu_setupgame">Full Game</string>
    <string name="ship_carrier">Carrier</string>
    <string name="ship_battleship">Battleship</string>
    <string name="ship_cruiser">Cruiser</string>
    <string name="ship_submarine">Submarine</string>
    <string name="ship_destroyer">Destroyer</string>
    <string name="menu_settings">menu</string>
    <string name="button_Startgame">Start Game!</string>
    <string name="button_Orientation">Placing vertical, press for horizontal</string>

</resources>
