<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_horizontal|clip_vertical"
  	android:background="@drawable/background_image_landscape" 
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dip" >

        <com.saxion.shoque.playground.view.ShoqueGameBoardView
            android:id="@+id/shoqueGameBoardView1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
    		android:background="@drawable/background_grid"
    		android:layout_margin="5dip"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonCarrier"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ship_carrier" />

            <Button
                android:id="@+id/buttonBattleship"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ship_battleship" />

            <Button
                android:id="@+id/buttonCruiser"
            	android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ship_cruiser" />

            <Button
                android:id="@+id/buttonSubmarine"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ship_submarine" />

            <Button
                android:id="@+id/buttonDestroyer"
               	android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/ship_destroyer" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonStartGame"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_Startgame" />

            <Button
                android:id="@+id/buttonOrientation"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/button_Orientation" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>
